--- a/app/views/admin/albums/_block_admin_album.html.erb
+++ b/app/views/admin/albums/_block_admin_album.html.erb
@@ -1,7 +1,7 @@
 <div class="col thumb album-thumb border-0 mx-3">
   <div class="thumb-container justify-content-center row">
-    <div class="edit-admin font-size text-white m-0 row justify-content-between" style="z-index:100">
-      <div class="col-10 p-0" style="overflow:hidden; text-overflow:ellipsis">
+    <div class="edit-admin font-size text-white m-0 row justify-content-between z-100">
+      <div class="col-10 p-0 overflow-dot">
         <%= content.description%>
       </div>
       <a href="<%= edit_admin_album_path(content.id)%>" class="text-white float-right col-1 pl-0">
