--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid font">
   <%= render "shared/homebar_unauthenticated"%>
-  <div class="row" style="height:30px;">
+  <div class="row h-20">
   </div>
   <div class="row justify-content-center mt-5">
     <div class="col-6">
@@ -19,19 +19,19 @@
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: "mt-5 col", id: "signup_form"} )  do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
 
-        <div class="field form-group mx-3" style="font-size: 16px">
+        <div class="field form-group mx-3 font-size-16">
           <%= f.label :firstname, t('.firstname')%><br />
-          <%= f.text_field :firstname, autofocus: true, autocomplete: "firstname", placeholder: "First Name", class: "border rounded-lg form-control pl-3", style: "height:50px" %>
+          <%= f.text_field :firstname, autofocus: true, autocomplete: "firstname", placeholder: "First Name", class: "border rounded-lg form-control pl-3 h-50" %>
         </div>
 
-        <div class="field form-group mx-3" style="font-size: 16px">
+        <div class="field form-group mx-3 font-size-16">
           <%= f.label :lastname, t('.lastname')%><br />
-          <%= f.text_field :lastname, autocomplete: "lastname", placeholder: "Last Name", class: "border rounded-lg form-control pl-3", style: "height:50px" %>
+          <%= f.text_field :lastname, autocomplete: "lastname", placeholder: "Last Name", class: "border rounded-lg form-control pl-3 h-50"%>
         </div>
 
-        <div class="field form-group mx-3" style="font-size: 16px">
+        <div class="field form-group mx-3 font-size-16">
           <%= f.label :email %><br />
-          <%= f.email_field :email, autocomplete: "email", placeholder: "Email", class: "border rounded-lg form-control pl-3", style: "height:50px" %>
+          <%= f.email_field :email, autocomplete: "email", placeholder: "Email", class: "border rounded-lg form-control pl-3 h-50"%>
         </div>
 
         <div class="field form-group mx-3">
@@ -39,16 +39,16 @@
           <% if @minimum_password_length %>
           <em>(<%= @minimum_password_length %> characters minimum)</em>
           <% end %><br />
-          <%= f.password_field :password, autocomplete: "new-password", placeholder: "Password", class: "border rounded-lg form-control pl-3", style: "height:50px" %>
+          <%= f.password_field :password, autocomplete: "new-password", placeholder: "Password", class: "border rounded-lg form-control pl-3 h-50"%>
         </div>
 
         <div class="field form-group mx-3">
           <%= f.label :password_confirmation, t('.password_confirmation') %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Password", class: "border rounded-lg form-control pl-3", style: "height:50px" %>
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Password", class: "border rounded-lg form-control pl-3 h-50"%>
         </div>
 
-        <div class="actions form-group row justify-content-center" style: "font-size:16px">
-          <%= f.submit "Sign up", {class: "btn chosen col-4 rounded-lg", style: "height: 50px"} %>
+        <div class="actions form-group row justify-content-center font-size-16">
+          <%= f.submit "Sign up", {class: "btn chosen col-4 rounded-lg h-50"} %>
         </div>
       <% end %>
     </div>
