--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -30,8 +30,8 @@
             </div>
           </div>
           <div class="row mx-2 my-3">
-            <div class="form-group-vertical bg-grey rounded add-photo" style="height:200px; width:200px">
-              <%= f.file_field :image, {style: "opacity:0; height: 200px; width: 200px"}%>
+            <div class="form-group-vertical bg-grey rounded add-photo square-200">
+              <%= f.file_field :image, {class: "square-200 o-0"}%>
             </div>
           </div>
           <div class="row mx-2 my-5">
