--- a/app/views/users/_block_album_tab.html.erb
+++ b/app/views/users/_block_album_tab.html.erb
@@ -2,7 +2,7 @@
   <div class="thumb-container justify-content-center row">
     <div class="images-container">
       <% if !album.public %>
-        <div class="lock rounded-circle bg-white px-1 py-0 m-1" style="z-index: 100">
+        <div class="lock rounded-circle bg-white px-1 py-0 m-1 z-100"
           <img src="https://img.icons8.com/android/24/000000/lock.png" height="12px" width="12px" class="absolute"/>
         </div>
       <% end %>
