--- a/app/views/admin/photos/edit.html.erb
+++ b/app/views/admin/photos/edit.html.erb
@@ -4,7 +4,7 @@
     <%= render "shared/feed_discover"%>
     <div class="col-sm-9 col-12 p-3">
       <div class="col bg-white pb-3 mb-5">
-        <div class="font-weight-bold border-bottom pt-4 pb-3 justify-content-between row mx-1" style="font-size:20px;">
+        <div class="font-weight-bold border-bottom pt-4 pb-3 justify-content-between row mx-1 font-size-20">
           <div class="col">
             <%= t ('.header')%>
           </div>
@@ -32,12 +32,12 @@
             </div>
           </div>
           <div class="row mx-2 my-3">
-            <div class="form-group-vertical bg-grey rounded add-photo" style="height:205px; width:205px">
+            <div class="form-group-vertical bg-grey rounded add-photo square-200" >
               <%= image_tag @photo.image.thumb.url%>
             </div>
           </div>
-          <div class="row mx-2 my-5 justify-content-between" style="width:200px;">
-            <%= submit_tag t('.save'), {class: "btn add px-3"}%>
+          <div class="row mx-2 my-5 justify-content-between w-200">
+            <%= submit_tag t('.save'), {class: "btn add px-3"} %>
             <%= link_to t('.delete'), admin_photo_path(@photo.id), {class: "btn delete px-3", method: :delete}%>
           </div>
         <% end %>
