--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -3,8 +3,8 @@
   <div class="row bg-grey">
     <%= render "shared/manage"%>
     <div class="col-9 p-3">
-      <div class="col bg-white pb-3 mb-5" style="height:1000px">
-        <div class="font-weight-bold border-bottom pt-4 pb-3 justify-content-between row mx-1" style="font-size:20px;">
+      <div class="col bg-white pb-3 mb-5 h-500">
+        <div class="font-weight-bold border-bottom pt-4 pb-3 justify-content-between row mx-1 font-size-20">
           <div class="col">
             <%= t('.edit_profile')%>
           </div>
