--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -5,7 +5,7 @@
     <div class="col-sm-9 col-12 p-3">
       <div class="col bg-white pb-3 mb-5 row">
         <div class="col-12">
-          <div class="font-weight-bold border-bottom pt-4 row" style="font-size:16px;width:100%;">
+          <div class="font-weight-bold border-bottom pt-4 row font-size-16">
             <div class="col pr-0">First Name</div>
             <div class="col">Last Name</div>
             <div class="col-4">Email</div>
