--- a/app/views/albums/new.html.erb
+++ b/app/views/albums/new.html.erb
@@ -4,7 +4,7 @@
     <%= render "shared/feed_discover"%>
     <div class="col-sm-9 col-12 p-3">
       <div class="col bg-white pb-3 mb-5">
-        <div class="font-weight-bold border-bottom py-4" style="font-size:20px;"><%= t ('.header')%></div>
+        <div class="font-weight-bold border-bottom py-4 font-size-20"><%= t ('.header')%></div>
         <%= form_for @photo, url: user_albums_path do |f| %>
           <div class="row">
             <div class="col-12 col-sm px-4">
@@ -30,8 +30,8 @@
             </div>
           </div>
           <div class="row mx-2 my-3">
-            <div class="form-group-vertical bg-grey rounded add-photo" style="height:200px; width:200px">
-              <%= f.file_field :image, {style: "opacity:0; height: 200px; width: 200px"}%>
+            <div class="form-group-vertical bg-grey rounded add-photo square-200">
+              <%= f.file_field :image, {class: "square-200 o-0"}%>
             </div>
           </div>
           <div class="row mx-2 my-5">
