--- a/app/views/shared/_homebar_unauthenticated.html.erb
+++ b/app/views/shared/_homebar_unauthenticated.html.erb
@@ -1,4 +1,4 @@
-<div class="row bg justify-content-between" name="home-bar" style="height:40px;">
+<div class="row bg justify-content-between h-40" name="home-bar"
   <div class="row col-6 align-items-center h-100 m-0 pr-0">
     <div class="col-4 pr-0 ml-3">
       <a class="navbar-brand float-right text-white" href="<%= root_unauthenticated_path %>" ><%= t ('brand') %></a>
