--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,10 +1,3 @@
-
-
-<%#= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %>
-
-<%#= link_to "Back", :back %>
-
-
 <div class="container-fluid font">
   <%= render "shared/homebar"%>
   <div class="row bg-grey">
@@ -55,7 +48,7 @@
               </div>
             </div>
 
-            <div class="row mb-3 font-size-16"
+            <div class="row mb-3 font-size-16">
               <div class="field form-group row col-12">
                 <%= f.label :current_password, t('.current_password'), class: "col-4 text-right" %>
                 <%= f.password_field :current_password, autocomplete: "current-password", class: "form-control col-8", placeholder:"Current Password" %>
