--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -45,7 +45,7 @@
 
               <div class="field form-group row col-12 align-items-center">
                 <%= f.label :email, t('.email'), class: "col-4 text-right" %>
-                <%= f.email_field :email, autocomplete: "email", class:"form-control col-8", placeholder:"someone@example.com" %>
+                <%= f.email_field :email, autocomplete: "email", class:"form-control col-8", placeholder:"someone@example.com", disabled: true %>
               </div>
 
               <div class="field form-group row col-12 align-items-center">
