--- a/app/views/admin/albums/edit.html.erb
+++ b/app/views/admin/albums/edit.html.erb
@@ -37,8 +37,8 @@
                 <%= image_tag photo.image.thumb.url, {class: "form-group-vertical bg-grey rounded add-photo col-sm-3 col-12 mr-3"} %>
               <% end %>
             <% end %>
-            <div class="form-group-vertical bg-grey rounded add-photo square-200 o-0" >
-              <%= f.file_field :image, {class: "file-field"}%>
+            <div class="form-group-vertical bg-grey rounded add-photo square-200" >
+              <%= f.file_field :image, {class: "square-200 o-0"}%>
             </div>
           </div>
           <div class="row mx-2 my-5 justify-content-between w-200">
