--- a/app/views/admin/users/_block_admin_user.html.erb
+++ b/app/views/admin/users/_block_admin_user.html.erb
@@ -2,7 +2,7 @@
   <div class="col"><%= content.firstname%></div>
   <div class="col"><%= content.lastname %></div>
   <div class="col-4"><%= content.email%></div>
-  <div class="col-3">4:56am 04/16/2018</div>
+  <div class="col-3"><%= l content.last_sign_in_at, format: :last_update%></div>
   <div class="col-auto row">
     <%= link_to "Edit", edit_admin_user_path(id: content.id), {class:"btn add px mr-2"}%>
     <%= link_to "Delete", admin_user_path(content.id), {class: "btn delete px-3 mr-2", method: :delete}%>
