--- a/app/views/albums/edit.html.erb
+++ b/app/views/albums/edit.html.erb
@@ -12,35 +12,8 @@
             <%= link_to t('.back'), user_path(current_user.id), {class: "btn chosen"}%>
           </div>
         </div>
-        <%= form_for @photo, url: album_path, method: :put do |f| %>
-          <div class="row">
-            <div class="col-12 col-sm px-4">
-              <div class="form-group-vertical mt-4">
-                <%= f.label :title, t('.title')%><br>
-                <%= f.text_field :title, {class: "form-control col-11", value: @album.title}%>
-              </div>
-              <div class="form-group-vertical my-4">
-                <%= f.label :public, t('.public_mode')%><br>
-                <%= f.select :public, options_for_select([[t('.public'), true],[t('.private'), false]], @album.public), {class: "col-5 custom-select"}%>
-              </div>
-            </div>
-            <div class="col-12 col-sm px-4">
-              <div class="form-group-vertical mt-4">
-                <%= f.label :description, t('.description')%><br>
-                <%= f.text_area :description, {value: @album.description, class: "form-control", rows: "5", cols: "80"}%>
-              </div>
-            </div>
-          </div>
-          <div class="row mx-2 my-3">
-            <% @album.photos.each do |photo| %>
-              <% if !photo.image.file.nil?%>
-                <%= image_tag photo.image.thumb.url, {class: "form-group-vertical bg-grey rounded add-photo col-sm-3 col-12 mr-3"} %>
-              <% end %>
-            <% end %>
-            <div class="form-group-vertical bg-grey rounded add-photo square-200">
-              <%= f.file_field :image, {class: "square-200 o-0"}%>
-            </div>
-          </div>
+        <%= form_for @photo, url: album_path, method: :patch do |f| %>
+          <%= render partial: "shared/edit_album", locals: {f: f}%>
           <div class="row mx-2 my-5 justify-content-between w-200">
             <%= submit_tag t('.save'), {class: "btn add px-3"}%>
             <%= link_to t('.delete'), album_path(@album.id), {class: "btn delete px-3", method: :delete}%>
