--- a/app/views/users/_block_feed_photo.html.erb
+++ b/app/views/users/_block_feed_photo.html.erb
@@ -1,37 +1,9 @@
 <div class="col-sm-6 col-12 row bg-grey py-2 rounded shadow pr-0 mb-2">
   <div class="col-sm-6 col-12 pl-n1" >
-    <% if content.image.file.nil? %>
-      <img src="https://scontent.fsgn2-1.fna.fbcdn.net/v/t1.0-9/116212777_2941769292612649_3417797964556573653_o.png?_nc_cat=107&_nc_sid=09cbfe&_nc_ohc=reSenZfdMa0AX_P62Vw&_nc_ht=scontent.fsgn2-1.fna&oh=b036e28f8182b447d68134f50e3e2fdd&oe=5F746402" alt="doggo" class="img-fluid img-thumbnail" style="width:100%" />
-    <% else %>
-      <%= image_tag content.image.thumb.url, {class: "img-fluid img-thumbnail", style: "width: 100%"} %>
-    <% end %>
+    <%= image_tag content.image.thumb.url, {class: "img-fluid img-thumbnail", style: "width: 100%"} %>
   </div>
   <div class="col-sm-6 col-12 row pr-0">
-    <div class="row align-items-center col-12 pr-0 justify-content-between" name="info-part">
-      <div class="col-auto row">
-        <div class="row col-auto">
-          <% if content.user.avatar.file.nil? %>
-            <button class="rounded-circle chosen border-0"><%= content.user.avatar_name%></button>
-          <% else %>
-            <%= image_tag content.user.avatar.avatar.url, {class: "rounded-circle img-fluid"} %>
-          <% end %>
-          <a href="<%= user_path(content.user.id)%>" class="btn font-size pl-1 pr-0"><%= content.user.name%></a>
-        </div>
-      </div>
-    </div>
-    <div class="row font-weight-bold col-12" name="title-post"><%= content.title %> </div>
-    <div class="row col-12" name="description-post"><%= content.description %></div>
-    <div class="row justify-content-between align-items-end col-12 mr-0 pr-0">
-      <%= link_to toggle_like_path(content_id: content.id, content_type: content_type, id: current_user.id), {name: "like_#{content.id}", remote: true} do %>
-        <div class="col text-color font-size">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="12" height="12"
-          fill="<% if liked(content.id, content_type) %>rgb(60, 90, 154)<% else %>lightgrey<% end %>">
-            <path fill-rule="evenodd" d="M7.655 14.916L8 14.25l.345.666a.752.752 0 01-.69 0zm0 0L8 14.25l.345.666.002-.001.006-.003.018-.01a7.643 7.643 0 00.31-.17 22.08 22.08 0 003.433-2.414C13.956 10.731 16 8.35 16 5.5 16 2.836 13.914 1 11.75 1 10.203 1 8.847 1.802 8 3.02 7.153 1.802 5.797 1 4.25 1 2.086 1 0 2.836 0 5.5c0 2.85 2.045 5.231 3.885 6.818a22.075 22.075 0 003.744 2.584l.018.01.006.003h.002z"></path>
-          </svg>
-          <span><%= content.likes_count%></span>
-        </div>
-      <% end %>
-      <div class="col-auto text-secondary font-size-sm mr-0 pr-0 text-right"><%= l content.updated_at, format: :last_update%></div>
-    </div>
+    <%= render partial: "shared/user_display", locals: {content: content}%>
+    <%= render partial: "shared/content_details", locals: {content: content, content_type: content_type}%>
   </div>
 </div>
