--- a/app/views/users/feed.html.erb
+++ b/app/views/users/feed.html.erb
@@ -3,10 +3,10 @@
   <div class="row bg-grey">
     <div class="col pt-4 align-items-center">
       <div class="row col ml-2">
-        <%= link_to I18n.t('feed'), feed_path, {class: "btn text-color"}%>
+        <%= link_to t('.feed'), feed_path, {class: "btn text-color"}%>
       </div>
       <div class="row col ml-2">
-        <%= link_to I18n.t('discover'), discover_path(content: "photo"), {class: "btn text-secondary"}%>
+        <%= link_to t('.discover'), discover_path(content: "photo"), {class: "btn text-secondary"}%>
       </div>
     </div>
     <div class="col-sm-9 col-12 p-3">
