--- a/app/views/albums/new.html.erb
+++ b/app/views/albums/new.html.erb
@@ -5,7 +5,7 @@
     <div class="col-sm-9 col-12 p-3">
       <div class="col bg-white pb-3 mb-5">
         <div class="font-weight-bold border-bottom py-4 font-size-20"><%= t ('.header')%></div>
-        <%= form_for @photo, url: user_albums_path do |f| %>
+        <%= form_for @photo, url: user_albums_path, html: {id: "new_album"} do |f| %>
           <%= render partial: "shared/new_content", locals: {f: f, content: "Album"}%>
         <% end %>
       </div>
