--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -50,7 +50,7 @@
 
               <div class="field form-group row col-12 align-items-center">
                 <%= f.label :password, t('.password'), class: "col-4 text-right" %>
-                <%= f.password_field :password, autocomplete: "new-password", class: "form-control col-8", placeholder: "New Password" %>
+                <%= f.password_field :password, class: "form-control col-8", placeholder: "New Password" %>
               </div>
 
               <div class="form-group row col-12">
