--- a/app/views/shared/_follow_tab.html.erb
+++ b/app/views/shared/_follow_tab.html.erb
@@ -1,10 +1,6 @@
 <div class="col-sm-3 col-6 row bg-grey shadow rounded justify-content-center mx-2 my-1">
-  <div class="row mt-3 justify-content-center">
-    <% if rendered_user.avatar.file.nil? %>
-      <img src="https://scontent.fsgn2-1.fna.fbcdn.net/v/t1.0-9/116212777_2941769292612649_3417797964556573653_o.png?_nc_cat=107&_nc_sid=09cbfe&_nc_ohc=reSenZfdMa0AX_P62Vw&_nc_ht=scontent.fsgn2-1.fna&oh=b036e28f8182b447d68134f50e3e2fdd&oe=5F746402" alt="avatar" class="col-8 img-fluid rounded-circle"/>
-    <% else %>
-      <%= image_tag rendered_user.avatar.thumb.url, {class: "col-8 img-fluid rounded-circle"} %>
-    <% end %>
+  <div class="row mt-3 justify-content-center col-12">
+    <%= image_tag rendered_user.avatar.thumb.url, {class: "col-8 img-fluid rounded-circle"} %>
   </div>
   <div class="my-1 justify-content-center row col-12">
     <%= link_to rendered_user.name, user_path(rendered_user.id), {class: "font-weight-bold mb-0 text-decoration-none"}%>
