--- a/app/views/admin/users/_block_admin_user.html.erb
+++ b/app/views/admin/users/_block_admin_user.html.erb
@@ -5,6 +5,6 @@
   <div class="col-3"><%= l content.last_sign_in_at, format: :last_update%></div>
   <div class="col-auto row">
     <%= link_to "Edit", edit_admin_user_path(id: content.id), {class:"btn add px mr-2"}%>
-    <%= link_to "Delete", admin_user_path(content.id), {class: "btn delete px-3 mr-2", method: :delete}%>
+    <%= link_to "Delete", admin_users_path, {class: "btn delete px-3 mr-2", method: :delete}%>
   </div>
 </div>
