--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -131,6 +131,14 @@
   height: 200px;
   width: 200px
 }
+.close {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  z-index: 1000;
+  height: 16px;
+  width: 16px
+}
 .o-0 {
   opacity: 0;
 }
